--- a/manifest .json
+++ b/manifest .json
@@ -9,14 +9,14 @@
   "background_color": "#121212",
   "icons": [
     {
-      "src": "icons/icon-192x192.png",
+      "src": "icons/icon-192x192.jpg",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/jpg"
     },
     {
-      "src": "icons/icon-512x512.png",
+      "src": "icons/icon-512x512.jpg",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/jpg"
     },
     {
       "src": "icons/icon-512x512-maskable.png",
